changes for heading

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
 
 <div class="container">
     <div class="filter-header">
-        <button type="button" class="btn btn-white" id="sortByPriority">Sort by Priority</button>
-        <button type="button" class="btn btn-white" id="sortByEndDate">Sort by End Date</button>
+        <h2>ToDo - Gamitar</h2>
+        <div>
+            <button type="button" class="btn btn-white" id="sortByPriority">Sort by Priority</button>
+            <button type="button" class="btn btn-white" id="sortByEndDate">Sort by End Date</button>
+        </div>
     </div>
     <div class="row mt-2">
         <div class="col-md-4">
